move the shouldEncodeFileName field from the common log export rule field to a type-specific field
