# web/static/docs/operator/swagger.json
@@ -211,6 +211,10 @@
                     "description": "Root directory to store logs within external storage",
                     "type": "string"
                 },
+                "shouldEncodeFileName": {
+                    "description": "Provide an option to convert '+' to '%2B' to address issues in certain web environments where '+' is misinterpreted",
+                    "type": "boolean"
+                },
                 "timeLayoutOfSubDirectory": {
                     "description": "An option(default `2006-01`) that sets the name of the sub-directory following `{Root path}` to a time-based layout",
                     "type": "string",
@@ -371,10 +375,6 @@
                             "$ref": "#/definitions/v1.S3Bucket"
                         }
                     ]
-                },
-                "shouldEncodeFileName": {
-                    "description": "Provide an option to convert '+' to '%2B' to address issues in certain web environments where '+' is misinterpreted",
-                    "type": "boolean"
                 }
             }
         },
@@ -425,6 +425,10 @@
                 "secretKey": {
                     "description": "S3 bucket secret key",
                     "type": "string"
+                },
+                "shouldEncodeFileName": {
+                    "description": "Provide an option to convert '+' to '%2B' to address issues in certain web environments where '+' is misinterpreted",
+                    "type": "boolean"
                 },
                 "tags": {
                     "description": "Tags for objects to be stored",
